# youtube-to-slides

./: README.md  pyproject.toml
.claude/skills/youtube-to-slides/references/: STYLES.md
.claude/skills/youtube-to-slides/scripts/: check-env.sh  run.sh  setup.sh
skills/youtube-to-slides/: .env.example  SKILL.md  pyproject.toml
skills/youtube-to-slides/references/: STYLES.md  TROUBLESHOOTING.md
skills/youtube-to-slides/scripts/: check-env.sh  run.sh  setup.sh
skills/youtube-to-slides/src/yt_slides/: cli.py  config.py  pipeline.py
skills/youtube-to-slides/src/yt_slides/ai/: prompt_builder.py  summarizer.py
skills/youtube-to-slides/src/yt_slides/youtube/: metadata.py  url_parser.py
src/yt_slides/: __init__.py  config.py  models.py  pipeline.py
src/yt_slides/ai/: gemini_client.py  prompt_builder.py  segmenter.py
src/yt_slides/image/: generator.py
src/yt_slides/youtube/: chapters.py  metadata.py  transcript.py
